--- a/algo_trading.ipynb
+++ b/algo_trading.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPRm3wZerxWT5oV5UYDoY8Z",
+      "authorship_tag": "ABX9TyM37Ob74QVH4/5QdNrAHFCs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -445,23 +445,23 @@
         "\n",
         "assets = cash + volume * y_test_actual[-1]\n",
         "print(f\"Cash: {cash: .2f}$, Volume: {volume}, Total Assets: {assets: .2f}$\")\n",
-        "print(f\"Earned {assets - 1000: .2f}$ in 186 days. Average annual return: {(assets / 1000) ** (365 / 186) * 100: .2f}%\")"
+        "print(f\"Earned {assets - 1000: .2f}$ in 186 days. Average annual return: {((assets / 1000) ** (365 / 186) - 1) * 100: .2f}%\")"
       ],
       "metadata": {
         "id": "rFcdHX3aFCn6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f311c696-cf1b-41e9-8c89-204a984a1827"
+        "outputId": "521f5889-5cb9-40bc-95e1-b485256f25f7"
       },
-      "execution_count": 228,
+      "execution_count": 231,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cash:  1131.75$, Volume: 0, Total Assets:  1131.75$\n",
-            "Earned  131.75$ in 186 days. Average annual return:  127.49%\n"
+            "Earned  131.75$ in 186 days. Average annual return:  27.49%\n"
           ]
         }
       ]
